# Deep-Researcher

./: .gitignore
.cursor/: rules
deep-researcher-app-beta/: RESEARCH_OUTPUT_SCHEMA.md  package-lock.json  package.json
deep-researcher-app-beta/src/: App.jsx  index.css  md.css
deep-researcher-app-beta/src-tauri/: Cargo.toml  chats.db  tauri.conf.json
deep-researcher-app-beta/src-tauri/src/: lib.rs
deep-researcher-app-beta/src/components/ui/: tooltip.jsx
deep-researcher-app-beta/src/components/widgets/: AIInput.jsx  AIInputSettingModal.jsx  CTAComponent.jsx  ChatArea.jsx  ChatHeader.jsx  ChatLayout.jsx  ChatSidebar.jsx  ResearchArea.jsx  StreamingMessageView.jsx  ThinkingMarkdown.jsx  ThisChatSettings.jsx  index.js
deep-researcher-app-beta/src/lib/: filesApi.js  researchApi.js
deep-researcher-app-beta/src/pages/: Chat.jsx
deep-researcher-app-beta/src/pages/base/: Settings.jsx  index.js
deep-researcher-backend-beta/: .gitignore  main.py  pyproject.toml
deep-researcher-backend-beta/apis/: model_meta.yaml
deep-researcher-backend-beta/database/: chat_history.db
deep-researcher-backend-beta/gemini/: gateway.py  sqlite_crud.py
deep-researcher-backend-beta/gemini/models/: models.py
deep-researcher-backend-beta/gemini/rag_store/: rag_stores.py
deep-researcher-backend-beta/gemini/rag_store/rag_vector_db/: chroma.sqlite3
deep-researcher-backend-beta/gemini/tools/: exporter.py  utils.py  web_search.py  youtube_Search.py
deep-researcher-backend-beta/gemini/v0/: chatManipulation.py
deep-researcher-backend-beta/ollama/: model_chat.py  model_list.py
(+12 files in other folders)
